--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -74,8 +74,8 @@ cherrypickUpdatedCacheClearTitle: "Clear the cache?"
 cherrypickUpdatedCacheClear: "It is <b>recommended to clear the cache</b> after the client is updated, as changes such as theme, color, and locale may not be reflected properly.\nYour account login status remains the same!"
 cherrypickUpdatedCacheClearLater: "If you want to clear the cache later, you can do it in <b>Settings</b> - <b>Clear Cache</b>!"
 headlineMisskey: "A network connected by notes"
-introMisskey: "Welcome! CherryPick is an open source, decentralized microblogging service.\nCreate \"notes\" to share your thoughts with everyone around you. 📡\nWith \"reactions\", you can also quickly express your feelings about everyone's notes. 👍\nLet's explore a new world! 🚀"
-poweredByMisskeyDescription: "{name} is one of the services powered by the open source platform <b>CherryPick</b> (referred to as a \"CherryPick instance\")."
+introMisskey: "Welcome! Rosekey is an open source, decentralized microblogging service.\nCreate \"notes\" to share your thoughts with everyone around you. 📡\nWith \"reactions\", you can also quickly express your feelings about everyone's notes. 👍\nLet's explore a new world! 🚀"
+poweredByMisskeyDescription: "{name} is one of the services powered by the open source platform <b>Rosekey</b> (referred to as a \"Rosekey instance\")."
 monthAndDay: "{month}/{day}"
 search: "Search"
 notifications: "Notifications"
@@ -247,7 +247,7 @@ youCanCleanRemoteFilesCache: "You can clear the cache by clicking the 🗑️ bu
 cacheRemoteSensitiveFiles: "Cache sensitive remote files"
 cacheRemoteSensitiveFilesDescription: "When this setting is disabled, sensitive remote files are loaded directly from the remote instance without caching."
 flagAsBot: "Mark this account as a bot"
-flagAsBotDescription: "Enable this option if this account is controlled by a program. If enabled, it will act as a flag for other developers to prevent endless interaction chains with other bots and adjust CherryPick's internal systems to treat this account as a bot."
+flagAsBotDescription: "Enable this option if this account is controlled by a program. If enabled, it will act as a flag for other developers to prevent endless interaction chains with other bots and adjust Rosekey's internal systems to treat this account as a bot."
 flagAsCat: "Mark this account as a cat"
 flagAsCatDescription: "Enable this option to mark this account as a cat."
 flagShowTimelineReplies: "Show replies in timeline"
@@ -310,7 +310,7 @@ noUsers: "There are no users"
 editProfile: "Edit profile"
 noteDeleteConfirm: "Are you sure you want to delete this note?"
 pinLimitExceeded: "You cannot pin any more notes"
-intro: "Installation of CherryPick has been finished! Please create an admin user."
+intro: "Installation of Rosekey has been finished! Please create an admin user."
 done: "Done"
 processing: "Processing..."
 preview: "Preview"
@@ -504,7 +504,7 @@ exploreFediverse: "Explore the Fediverse"
 popularTags: "Popular tags"
 userList: "Lists"
 about: "About"
-aboutMisskey: "About CherryPick"
+aboutMisskey: "About Rosekey"
 administrator: "Administrator"
 token: "Token"
 2fa: "Two-factor authentication"
@@ -657,7 +657,7 @@ popout: "Pop-out"
 volume: "Volume"
 masterVolume: "Master volume"
 notUseSound: "Disable sound"
-useSoundOnlyWhenActive: "Output sounds only if CherryPick is active."
+useSoundOnlyWhenActive: "Output sounds only if Rosekey is active."
 details: "Details"
 chooseEmoji: "Select an emoji"
 unableToProcess: "The operation could not be completed"
@@ -673,7 +673,7 @@ sort: "Sorting order"
 ascendingOrder: "Ascending"
 descendingOrder: "Descending"
 scratchpad: "Scratchpad"
-scratchpadDescription: "The Scratchpad provides an environment for AiScript experiments. You can write, execute, and check the results of it interacting with CherryPick in it."
+scratchpadDescription: "The Scratchpad provides an environment for AiScript experiments. You can write, execute, and check the results of it interacting with Rosekey in it."
 output: "Output"
 script: "Script"
 disablePagesScript: "Disable AiScript on Pages"
@@ -812,7 +812,7 @@ unclip: "Unclip"
 confirmToUnclipAlreadyClippedNote: "This note is already part of the \"{name}\" clip. Do you want to remove it from this clip instead?"
 public: "Public"
 private: "Private"
-i18nInfo: "CherryPick is being translated into various languages by volunteers. You can help at {link}."
+i18nInfo: "Rosekey is being translated into various languages by volunteers. You can help at {link}."
 manageAccessTokens: "Manage access tokens"
 accountInfo: "Account Info"
 notesCount: "Number of notes"
@@ -868,7 +868,7 @@ onlineUsersCount: "{n} users are online"
 nUsers: "{n} Users"
 nNotes: "{n} Notes"
 sendErrorReports: "Send error reports"
-sendErrorReportsDescription: "When turned on, detailed error information will be shared with CherryPick when a problem occurs, helping to improve the quality of CherryPick.\nThis will include information such the version of your OS, what browser you're using, your activity in CherryPick, etc."
+sendErrorReportsDescription: "When turned on, detailed error information will be shared with Rosekey when a problem occurs, helping to improve the quality of Rosekey.\nThis will include information such the version of your OS, what browser you're using, your activity in Rosekey, etc."
 myTheme: "My theme"
 backgroundColor: "Background color"
 accentColor: "Accent color"
@@ -963,7 +963,7 @@ troubleshooting: "Troubleshooting"
 useBlurEffect: "Use blur effects in the UI"
 useBlurEffectDescription: "When enabled, you can use more beautiful themes!"
 learnMore: "Learn more"
-misskeyUpdated: "CherryPick has been updated!"
+misskeyUpdated: "Rosekey has been updated!"
 whatIsNew: "Show changes"
 translate: "Translate"
 translatedFrom: "Translated from {x}"
@@ -1094,8 +1094,8 @@ numberOfLikes: "Likes"
 show: "Show"
 neverShow: "Don't show again"
 remindMeLater: "Maybe later"
-didYouLikeMisskey: "Have you taken a liking to CherryPick?"
-pleaseDonate: "{host} uses the free software, CherryPick. We would highly appreciate your donations so development of CherryPick can continue!"
+didYouLikeMisskey: "Have you taken a liking to Rosekey?"
+pleaseDonate: "{host} uses the free software, Rosekey. We would highly appreciate your donations so development of Rosekey can continue!"
 roles: "Roles"
 role: "Role"
 noRole: "Role not found"
@@ -1215,7 +1215,7 @@ rolesThatCanBeUsedThisEmojiAsReactionPublicRoleWarn: "These roles must be public
 cancelReactionConfirm: "Really delete your reaction?"
 changeReactionConfirm: "Really change your reaction?"
 later: "Later"
-goToMisskey: "To CherryPick"
+goToMisskey: "To Rosekey"
 additionalEmojiDictionary: "Additional emoji dictionaries"
 installed: "Installed"
 branding: "Branding"
@@ -1423,7 +1423,7 @@ _initialAccountSetting:
   pushNotificationDescription: "Enabling push notifications will allow you to receive notifications from {name} directly on your device."
   initialAccountSettingCompleted: "Profile setup complete!"
   haveFun: "Enjoy {name}!"
-  youCanContinueTutorial: "You can proceed to a tutorial on how to use {name} (CherryPick) or you can exit the setup here and start using it immediately."
+  youCanContinueTutorial: "You can proceed to a tutorial on how to use {name} (Rosekey) or you can exit the setup here and start using it immediately."
   startTutorial: "Start Tutorial"
   skipAreYouSure: "Really skip profile setup?"
   skipAreYouSureDescription: "If you interrupt initialization now, you can resume it at [More! - Help - Replay initial setting]."
@@ -1435,10 +1435,10 @@ _initialTutorial:
   skipAreYouSure: "Quit Tutorial?"
   _landing:
     title: "Welcome to the Tutorial"
-    description: "Here, you can learn the basics of using CherryPick and its features."
+    description: "Here, you can learn the basics of using Rosekey and its features."
   _note:
     title: "What is a Note?"
-    description: "Posts on CherryPick are called 'Notes.' Notes are arranged chronologically on the timeline and are updated in real-time."
+    description: "Posts on Rosekey are called 'Notes.' Notes are arranged chronologically on the timeline and are updated in real-time."
     reply: "Click on this button to reply to a message. It's also possible to reply to replies, continuing the conversation like a thread."
     renote: "You can share that note to your own timeline. You can also quote them with your comments."
     like: "You can add heart reactions to the Note. which is useful if you want to quickly leave a \"like!\"."
@@ -1454,7 +1454,7 @@ _initialTutorial:
     reactDone: "You can undo a reaction by pressing the '-' button."
   _timeline:
     title: "The Concept of Timelines"
-    description1: "CherryPick provides multiple timelines based on usage (some may not be available depending on the server's policies)."
+    description1: "Rosekey provides multiple timelines based on usage (some may not be available depending on the server's policies)."
     home: "You can view notes from accounts you follow."
     local: "You can view notes from all users on this server."
     social: "Notes from the Home and Local timelines will be displayed."
@@ -1463,7 +1463,7 @@ _initialTutorial:
     description3: "Additionally, there are list timelines and channel timelines. For more details, please refer to {link}."
   _postNote:
     title: "Note Posting Settings"
-    description1: "When posting a note on CherryPick, various options are available. The posting form looks like this."
+    description1: "When posting a note on Rosekey, various options are available. The posting form looks like this."
     _visibility:
       description: "You can limit who can view your note."
       public: "Your note will be visible for all users."
@@ -1491,7 +1491,7 @@ _initialTutorial:
     doItToContinue: "Mark the attachment file as sensitive to proceed."
   _done:
     title: "You've completed the tutorial! 🎉"
-    description: "The functions introduced here are just a small part. For a more detailed understanding of using CherryPick, please refer to {link}."
+    description: "The functions introduced here are just a small part. For a more detailed understanding of using Rosekey, please refer to {link}."
 _timelineDescription:
   home: "In the Home timeline, you can see notes from accounts you follow."
   local: "In the Local timeline, you can see notes from all users on this server."
@@ -1545,7 +1545,7 @@ _accountMigration:
   moveTo: "Migrate this account to a different one"
   moveToLabel: "Account to move to:"
   moveCannotBeUndone: "Account migration cannot be undone."
-  moveAccountDescription: "This will migrate your account to a different one.\n　・Followers from this account will automatically be migrated to the new account\n　・This account will unfollow all users it is currently following\n　・You will be unable to create new notes etc. on this account\n\nWhile migration of followers is automatic, you must manually prepare some steps to migrate the list of users you are following. To do so, carry out a follows export that you will later import on the new account in the settings menu. The same procedure applies to your lists as well as your muted and blocked users.\n\n(This explanation applies to CherryPick v13.12.0 and later. Other ActivityPub software, such as Mastodon, might function differently.)"
+  moveAccountDescription: "This will migrate your account to a different one.\n　・Followers from this account will automatically be migrated to the new account\n　・This account will unfollow all users it is currently following\n　・You will be unable to create new notes etc. on this account\n\nWhile migration of followers is automatic, you must manually prepare some steps to migrate the list of users you are following. To do so, carry out a follows export that you will later import on the new account in the settings menu. The same procedure applies to your lists as well as your muted and blocked users.\n\n(This explanation applies to Rosekey and later. Other ActivityPub software, such as Mastodon, might function differently.)"
   moveAccountHowTo: "To migrate, first create an alias for this account on the account to move to.\nAfter you have created the alias, enter the account to move to in the following format: @username@server.example.com"
   startMigration: "Migrate"
   migrationConfirm: "Really migrate this account to {account}? Once started, this process cannot be stopped or taken back, and you will not be able to use this account in its original state anymore."
@@ -1556,9 +1556,9 @@ _achievements:
   earnedAt: "Unlocked at"
   _types:
     _notes1:
-      title: "just setting up my crpk"
+      title: "just setting up my rose"
       description: "Post your first note"
-      flavor: "Have a good time with CherryPick!"
+      flavor: "Have a good time with Rosekey!"
     _notes10:
       title: "Some notes"
       description: "Post 10 notes"
@@ -1654,7 +1654,7 @@ _achievements:
     _login1000:
       title: "Master of Notes III"
       description: "Log in for a total of 1,000 days"
-      flavor: "Thank you for using CherryPick!"
+      flavor: "Thank you for using Rosekey!"
     _noteClipped1:
       title: "Must... clip..."
       description: "Clip your first note"
@@ -1713,19 +1713,19 @@ _achievements:
     _viewAchievements3min:
       title: "Likes Achievements"
       description: "Look at your list of achievements for at least 3 minutes"
-    _iLoveCherryPick:
-      title: "I Love CherryPick"
-      description: "Post \"I ❤ #CherryPick\""
-      flavor: "CherryPick's development team greatly appreciates your support!"
+    _iLoveMisskey:
+      title: "I Love Rosekey"
+      description: "Post \"I ❤ #Rosekey\""
+      flavor: "Rosekey's development team greatly appreciates your support!"
     _foundTreasure:
       title: "Treasure Hunt"
       description: "You've found the hidden treasure"
     _client30min:
       title: "Short break"
-      description: "Keep CherryPick opened for at least 30 minutes"
+      description: "Keep Rosekey opened for at least 30 minutes"
     _client60min:
-      title: "No \"Miss\" in CherryPick"
-      description: "Keep CherryPick opened for at least 60 minutes"
+      title: "No \"Miss\" in Rosekey"
+      description: "Keep Rosekey opened for at least 60 minutes"
     _noteDeletedWithin1min:
       title: "Nevermind"
       description: "Delete a note within a minute of posting it"
@@ -1793,12 +1793,12 @@ _achievements:
     _brainDiver:
       title: "Brain Diver"
       description: "Post the link to Brain Diver"
-      flavor: "Misskey-Misskey La-Tu-Ma"
+      flavor: "Rosekey-Misskey La-Tu-Ma"
     _smashTestNotificationButton:
       title: "Test overflow"
       description: "Trigger the notification test repeatedly within an extremely short time"
     _tutorialCompleted:
-      title: "CherryPick Elementary Course Diploma"
+      title: "Rosekey Elementary Course Diploma"
       description: "Tutorial completed"
     _bubbleGameExplodingHead:
       title: "🤯"
@@ -1971,7 +1971,7 @@ _registry:
   domain: "Domain"
   createKey: "Create key"
 _aboutMisskey:
-  about: "CherryPick is a customization open-source software based on Misskey that has been in development since 2021."
+  about: "Rosekey is an open source software based on Misskey and CherryPick and developed by FREELYNETWORK since 2024."
   contributors: "Main contributors"
   allContributors: "All contributors"
   source: "Source code"
@@ -2193,7 +2193,7 @@ _soundSettings:
   driveFileTypeWarn: "This file is not supported"
   driveFileTypeWarnDescription: "Select an audio file"
   driveFileDurationWarn: "The audio is too long."
-  driveFileDurationWarnDescription: "Long audio may disrupt using CherryPick. Still continue?"
+  driveFileDurationWarnDescription: "Long audio may disrupt using Rosekey. Still continue?"
 _ago:
   future: "Future"
   justNow: "Just now"
